@@ -6,7 +6,7 @@ AC_CANONICAL_TARGET
 
 SAMPLEICC_MAJOR_VERSION=1
 SAMPLEICC_MINOR_VERSION=2
-SAMPLEICC_MICRO_VERSION=7
+SAMPLEICC_MICRO_VERSION=8
 
 SAMPLEICC_VERSION=$SAMPLEICC_MAJOR_VERSION.$SAMPLEICC_MINOR_VERSION.${SAMPLEICC_MICRO_VERSION}
 AC_SUBST(SAMPLEICC_VERSION)
