@@ -1,3 +1,7 @@
+2006-07-31  Max Derhak
+  * Fixed bug in CIccTagChromaticity::Validate() to make comparisons
+	  with fixed floating point encoding rather than IEEE encoding
+
 2006-07-13  Max Derhak
   * Fixed bug with displaying icSigPerceptualRenderingIntentGamutTag
     tag's name correctly
